--- a/src/components/Cart.css
+++ b/src/components/Cart.css
@@ -193,7 +193,8 @@
   border: none;
   padding: 10px;
   border-radius: 8px;
-  font-size: 1.2rem;
+  font-family: 'PipersPlayroom', cursive, sans-serif;
+  font-size: 0.6rem;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s ease;
