--- a/src/components/DishCard.css
+++ b/src/components/DishCard.css
@@ -132,10 +132,10 @@
   text-align: left;
 }
 
-.dish-description {
+.dish-card .dish-description {
   font-family: 'PipersPlayroom', cursive, sans-serif;
   color: #6C7A89;
-  font-size: 1.0rem;
+  font-size: 1.0rem !important;
   line-height: 1.3;
   margin-bottom: 10px;
   flex: 1;
@@ -159,20 +159,20 @@
   text-align: left;
 }
 
-.rating-label {
+.dish-card .rating-label {
   font-family: 'PipersPlayroom', cursive, sans-serif;
   font-weight: 600;
   color: #2C3E50;
   margin-right: 5px;
   min-width: 30px;
-  font-size: 0.8rem;
+  font-size: 0.8rem !important;
   text-align: left;
   flex-shrink: 0;
 }
 
-.stars {
+.dish-card .stars {
   color: #FFD700;
-  font-size: 1.2rem;
+  font-size: 1.2rem !important;
   letter-spacing: 0.3px;
 }
 
